@@ -26,6 +26,7 @@ Bug fixes
  * Scaling images now rounds values to an integer so that images render without errors (Adrian Brunyate)
  * Revised test decorator to ensure TestPageEditHandlers test cases run correctly (Alex Tomkins)
  * Wagtail bird animation in admin now ends correctly on all browsers (Deniz Dogan)
+ * Explorer menu no longer shows sibling pages for which the user does not have access (Mike Hearn)
 
 
 Upgrade considerations
